--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "dependencies": {
     "@mantine/core": "^4.2.5",
     "@mantine/hooks": "^4.2.5",
-    "@mantine/rte": "^4.2.5",
+    "jodit-react": "^1.3.8",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "tabler-icons-react": "^1.48.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
